gitops-k8s/environments/env3/apps/sqctrl/manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: sqctrl
  name: sqctrl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sqctrl
  template:
    metadata:
      labels:
        app: sqctrl
    spec:
      containers:
        - env:
            - name: CATALINA_OPTS
              value: -Dcom.sun.management.jmxremote -Dcom.sun.management.jmxremote.port=9010 -Dcom.sun.management.jmxremote.rmi.port=9010 -Dcom.sun.management.jmxremote.ssl=false -Dcom.sun.management.jmxremote.authenticate=false -Djava.rmi.server.hostname=$hostAddr -Dcom.sun.management.jmxremote.local.only=false -Xdebug -Xrunjdwp:transport=dt_socket,address=*:8000,server=y,suspend=n
            - name: JAVA_OPTS
              value: -Djavax.net.ssl.trustStore=/opt/certs/sqfaas.jks -Djavax.net.ssl.trustStorePassword=demosys -Dlogback.configurationFile=/sqctrl/beta/config/logback.xml
          image: sinqiainterno.azurecr.io/fundos/sqctrl/controladoriacustodia:9.68af
          imagePullPolicy: Always
          name: sqctrl
          ports:
            - containerPort: 8080
            - containerPort: 8443
            - containerPort: 9010
            - containerPort: 9090
            - containerPort: 8000
          volumeMounts:
            - mountPath: /opt/certs
              name: certs # Aqui está o volume 'certs' que está sendo montado corretamente
              readOnly: true
            - name: sqctrl-config
              mountPath: /sqctrl/beta/config
            - name: sqctrl-data
              mountPath: /sqctrl/beta/data
            - name: sqctrl-exports
              mountPath: /sqctrl/beta/exports
            - name: sqctrl-filesportal
              mountPath: /sqctrl/beta/filesportal
            - name: sqctrl-imports
              mountPath: /sqctrl/beta/imports
            - name: sqctrl-shared
              mountPath: /sqctrl/beta/shared
            - name: sqctrl-upload
              mountPath: /sqctrl/beta/upload
      hostAliases:
        - hostnames:
            - kc.beta.sqfaas.dev
            - bff.beta.sqfaas.dev
            - beta.sqfaas.dev
          ip: 10.140.134.13
      imagePullSecrets:
        - name: acr-secret
      tolerations:
        - effect: NoExecute
          key: node.kubernetes.io/unreachable
          operator: Exists
        - effect: NoSchedule
          key: node-role.kubernetes.io/control-plane
          operator: Exists
      volumes:
        - name: certs
          secret:
            secretName: sqfaas-files # Secret que contém o arquivo sqfaas.jks
        - name: sqctrl-config
          persistentVolumeClaim:
            claimName: sqctrl-pvc-config
        - name: sqctrl-data
          persistentVolumeClaim:
            claimName: sqctrl-pvc-data
        - name: sqctrl-exports
          persistentVolumeClaim:
            claimName: sqctrl-pvc-exports
        - name: sqctrl-filesportal
          persistentVolumeClaim:
            claimName: sqctrl-pvc-filesportal
        - name: sqctrl-imports
          persistentVolumeClaim:
            claimName: sqctrl-pvc-imports
        - name: sqctrl-shared
          persistentVolumeClaim:
            claimName: sqctrl-pvc-shared
        - name: sqctrl-upload
          persistentVolumeClaim:
            claimName: sqctrl-pvc-upload
